examples/rejections/canisters/rejections/rejections.did
type RejectionCode = variant {
  NoError;
  CanisterError;
  SysTransient;
  DestinationInvalid;
  Unknown;
  SysFatal;
  CanisterReject;
};
service : () -> {
  get_rejection_code_canister_error : () -> (RejectionCode);
  get_rejection_code_canister_reject : () -> (RejectionCode);
  get_rejection_code_destination_invalid : () -> (RejectionCode);
  get_rejection_code_no_error : () -> (RejectionCode);
  get_rejection_message : (text) -> (text);
}